# Hyperbolic-Prompt-Detection-and-Sanitization

./: .gitignore  HyPE_inference.py  LICENSE.txt  README.md  pypi.md  pyproject.toml
COMPOSITIONAL_ATTACK/HyperbolicSD/: generate_visu.py
HyperbolicSVDD/source/: SVDD.py  __init__.py
datasets/: ViSU-Text_validation.json
hype/: _weights.py  inference.py
requirements/: repro.txt
src/HyperbolicSVDD/source/: SVDD.py
src/hype/: pipeline.py
src/hyps/harmful_word_identification/: word_attributions.py
src/hyps/prompt_sanitization/: bad-words.txt  stopwords.py  thesaurus_llm.py  thesaurus_word_removal.py  word_removal.py
