[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hype-defense"
version = "0.1.0"
description = "HyPE: Hyperbolic Prompt Espial (ICLR 2026)"
requires-python = ">=3.10"
readme = { file = "pypi.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
authors = [{ name = "Antonio Emanuele Cinà", email="acina04@gmail.com" }]

dependencies = [
  "torch",
  "transformers>=4.31.0",
  "accelerate",
  "numpy",
  "peft",
  "bitsandbytes",
  "huggingface-hub",
  "tokenizers",
  "safetensors",
  "loguru",
  "geoopt"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hype*", "HySAC.hysac*", "HyperbolicSVDD*"]

[tool.setuptools.package-data]
hype = ["assets/*.pth"]
