[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hype-hyps"
version = "0.1.0"
description = "HyPE + HyPS: Hyperbolic Prompt Espial and Sanitization (ICLR 2026)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = { file = "src/pypi.md", content-type = "text/markdown" }
license = "CC-BY-NC-ND-4.0"
authors = [{ name = "Antonio Emanuele Cinà", email="acina04@gmail.com" }]

dependencies = [
  "torch",
  "transformers>=4.31.0",
  "accelerate",
  "numpy",
  "peft",
  "bitsandbytes",
  "huggingface-hub",
  "tokenizers",
  "safetensors",
  "loguru",
  "geoopt",
  "captum",
  "requests"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hype*", "hyps*", "HySAC*", "HyperbolicSVDD*"]

[tool.setuptools.package-data]
hype = ["assets/*.pth"]
hyps = ["prompt_sanitization/*.txt"]

[project.urls]
Homepage = "https://github.com/HyPE-VLM/Hyperbolic-Prompt-Detection-and-Sanitization/"
